--- a/about.css
+++ b/about.css
@@ -64,7 +64,7 @@ body{
     max-width:600px ;
 }
 
-.home-content h3 span{
+.home-content h1 span{
     color:#0ef ;
 }
 .home-content h3{
@@ -99,7 +99,7 @@ body{
 
 .home-img img{
     max-width: 450px;
-    margin-right: -20px;
+    margin-left: -20px;
     opacity: 0;
     animation: zoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
     animation-delay: 2s , 3s;
@@ -107,32 +107,6 @@ body{
     border-radius: 310px;
     box-shadow: 0 0 30px #0ef;
 }
-
-.social-media a{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: 2px solid #0ef;
-    border-radius: 50%;
-    font-size: 20px;
-    color: #0ef;
-    text-decoration: none;
-    margin: 30px 15px 30px 0;
-    transition: .5s ease;
-    opacity: 0;
-    animation: slideLeft 1s ease forwards;
-    animation-delay: calc(.2s *var(--i));
-}
-
-.social-media a:hover{
-    background: #0ef;
-    color:#1C2E4F ;
-    box-shadow: 0 0 20px #0ef;
-}
-
 .btn{
     display: inline-block;
     padding: 12px 28px;
@@ -148,7 +122,6 @@ body{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
 }
-
 
 /*KEYFRAMES ANIMATION*/
 @keyframes slideRight{
