--- a/contact.css
+++ b/contact.css
@@ -50,92 +50,89 @@ body{
 .navbar a.active{
     color:cyan ;
 }
+
 .home{
-    position: relative;
+    position: center;
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
+    height: 25vh;
     align-items: center;
-    padding: 70px 10% 0;
+    padding-left:35% ;
+    padding-top: 5%;
 }
 
 .home-content{
     max-width:600px ;
 }
 
-.home-content h3 span{
+.home-content h1 span{
     color:#0ef ;
 }
-.home-content h3{
-    font-size: 32px;
-    font-weight: 700;
-    opacity: 0;
-    animation: slideBottom 1s ease forwards;
-    animation-delay: .7s;
-}
-
-.home-content h3:nth-of-type(2){
-    margin-bottom: 30px;
-    animation: slideTop 1s ease forwards;
-    animation-delay: .7s;
-}
-
 .home-content h1{
-    font-size: 56px;
-    font-weight:700 ;
-    margin: -3px 0;
+    font-size: 50px;
+    font-weight:900 ;
     opacity: 0;
     animation: slideRight 1s ease forwards;
     animation-delay: 1s;
 }
 
-.home-content p{
-    font-size: 16px;
-    opacity: 0;
-    animation: slideLeft 1s ease forwards;
-    animation-delay: 1s;
+.inp{
+    padding-left: 22%;
+    justify-content: space-between;
 }
-
-.home-img img{
-    max-width: 450px;
-    margin-right: -20px;
-    opacity: 0;
-    animation: zoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
-    animation-delay: 2s , 3s;
-    background: #0ef;
-    border-radius: 310px;
-    box-shadow: 0 0 30px #0ef;
-}
-
-.social-media a{
-    display: inline-flex;
-    justify-content: center;
+div input,textarea{
+    display: block;
+    width: 65%;
+    padding: 15px;
+    margin: 13px 0;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
     align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: 2px solid #0ef;
-    border-radius: 50%;
-    font-size: 20px;
-    color: #0ef;
-    text-decoration: none;
-    margin: 30px 15px 30px 0;
-    transition: .5s ease;
+    background-color: #071228;
+    border-color: #0ef;
+    box-shadow: 0 0 10px #0ef;
+    color: #fff;
+    font-family: 'Poppins',sans-serif;
+}
+
+textarea{
+    height: 180px;
+}
+
+.i1{
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: 1.4s;
+}
+
+.i2{
     opacity: 0;
     animation: slideLeft 1s ease forwards;
-    animation-delay: calc(.2s *var(--i));
+    animation-delay: 1.6s;
 }
 
-.social-media a:hover{
-    background: #0ef;
-    color:#1C2E4F ;
-    box-shadow: 0 0 20px #0ef;
+.i3{
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: 1.8s;
 }
 
+.i4{
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 2s;
+}
+
+.i5{
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: 2.2s;
+}
 .btn{
     display: inline-block;
     padding: 12px 28px;
+    margin-left: 42%;
     background: #0ef;
     border-radius: 40px;
     box-shadow: 0 0 10px #0ef;
@@ -145,9 +142,10 @@ body{
     text-decoration: none;
     font-weight: 600;
     opacity: 0;
-    animation: slideTop 1s ease forwards;
-    animation-delay: 2s;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: 2.4s;
 }
+
 
 
 /*KEYFRAMES ANIMATION*/
