--- a/portfolio.css
+++ b/portfolio.css
@@ -51,40 +51,24 @@ body{
     color:cyan ;
 }
 .home{
-    position: relative;
+    position: center;
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 70px 10% 0;
+    padding-left:35% ;
+    padding-top: 5%;
 }
 
 .home-content{
     max-width:600px ;
 }
 
-.home-content h3 span{
+.home-content h1 span{
     color:#0ef ;
 }
-.home-content h3{
-    font-size: 32px;
-    font-weight: 700;
-    opacity: 0;
-    animation: slideBottom 1s ease forwards;
-    animation-delay: .7s;
-}
-
-.home-content h3:nth-of-type(2){
-    margin-bottom: 30px;
-    animation: slideTop 1s ease forwards;
-    animation-delay: .7s;
-}
-
 .home-content h1{
-    font-size: 56px;
-    font-weight:700 ;
-    margin: -3px 0;
+    font-size: 50px;
+    font-weight:900 ;
     opacity: 0;
     animation: slideRight 1s ease forwards;
     animation-delay: 1s;
@@ -99,54 +83,10 @@ body{
 
 .home-img img{
     max-width: 450px;
-    margin-right: -20px;
+    margin-left: -20px;
     opacity: 0;
     animation: zoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
     animation-delay: 2s , 3s;
-    background: #0ef;
-    border-radius: 310px;
-    box-shadow: 0 0 30px #0ef;
-}
-
-.social-media a{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: 2px solid #0ef;
-    border-radius: 50%;
-    font-size: 20px;
-    color: #0ef;
-    text-decoration: none;
-    margin: 30px 15px 30px 0;
-    transition: .5s ease;
-    opacity: 0;
-    animation: slideLeft 1s ease forwards;
-    animation-delay: calc(.2s *var(--i));
-}
-
-.social-media a:hover{
-    background: #0ef;
-    color:#1C2E4F ;
-    box-shadow: 0 0 20px #0ef;
-}
-
-.btn{
-    display: inline-block;
-    padding: 12px 28px;
-    background: #0ef;
-    border-radius: 40px;
-    box-shadow: 0 0 10px #0ef;
-    font-size: 16px;
-    color: #1C2E4F;
-    letter-spacing: 1px;
-    text-decoration: none;
-    font-weight: 600;
-    opacity: 0;
-    animation: slideTop 1s ease forwards;
-    animation-delay: 2s;
 }
 
 
