--- a/portfolio.css
+++ b/portfolio.css
@@ -53,7 +53,7 @@ body{
 .home{
     position: center;
     width: 100%;
-    height: 100vh;
+    height: 20vh;
     align-items: center;
     padding-left:35% ;
     padding-top: 5%;
@@ -81,13 +81,22 @@ body{
     animation-delay: 1s;
 }
 
-.home-img img{
-    max-width: 450px;
-    margin-left: -20px;
+img{
+    height: 250px;
+    width: 350px;
+    border-radius: 30px;
+    display: inline;
+    margin: 20px;
     opacity: 0;
-    animation: zoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
+    animation: zoomIn 1s ease forwards;
     animation-delay: 2s , 3s;
+    animation-delay: calc(.2s* var(--i));
+    box-shadow: 0 0 10px #0ef;
 }
+.img{
+    margin-left: 200px;
+}
+
 
 
 /*KEYFRAMES ANIMATION*/
